--- a/asset/index.css
+++ b/asset/index.css
@@ -1,5 +1,6 @@
 .oxmod-psychological-test {
   /* CSS */
+  padding: 10px;
   color: #555;
 }
 .oxmod-psychological-test h2,
@@ -8,13 +9,13 @@
 }
 .oxmod-psychological-test .psychological-test-list {
   padding: 0px 20px;
-  margin: 0 10px;
+  margin: 10px 0;
   overflow: hidden;
   transition: all .5s;
 }
 .oxmod-psychological-test .psychological-test-list li {
   list-style: decimal;
-  height: 50px;
+  height: 80px;
 }
 .oxmod-psychological-test .psychological-test-list li label {
   display: inline-block;
@@ -22,96 +23,96 @@
   min-width: 20%;
 }
 .oxmod-psychological-test .scrollwindow {
-  height: 50px;
+  height: 80px;
   overflow: hidden;
 }
 .oxmod-psychological-test [data-on="1"] {
   transform: translate(0, 0px);
 }
 .oxmod-psychological-test [data-on="2"] {
-  transform: translate(0, -50px);
+  transform: translate(0, -80px);
 }
 .oxmod-psychological-test [data-on="3"] {
-  transform: translate(0, -100px);
+  transform: translate(0, -160px);
 }
 .oxmod-psychological-test [data-on="4"] {
-  transform: translate(0, -150px);
+  transform: translate(0, -240px);
 }
 .oxmod-psychological-test [data-on="5"] {
-  transform: translate(0, -200px);
+  transform: translate(0, -320px);
 }
 .oxmod-psychological-test [data-on="6"] {
-  transform: translate(0, -250px);
-}
-.oxmod-psychological-test [data-on="7"] {
-  transform: translate(0, -300px);
-}
-.oxmod-psychological-test [data-on="8"] {
-  transform: translate(0, -350px);
-}
-.oxmod-psychological-test [data-on="9"] {
   transform: translate(0, -400px);
 }
+.oxmod-psychological-test [data-on="7"] {
+  transform: translate(0, -480px);
+}
+.oxmod-psychological-test [data-on="8"] {
+  transform: translate(0, -560px);
+}
+.oxmod-psychological-test [data-on="9"] {
+  transform: translate(0, -640px);
+}
 .oxmod-psychological-test [data-on="10"] {
-  transform: translate(0, -450px);
+  transform: translate(0, -720px);
 }
 .oxmod-psychological-test [data-on="11"] {
-  transform: translate(0, -500px);
-}
-.oxmod-psychological-test [data-on="12"] {
-  transform: translate(0, -550px);
-}
-.oxmod-psychological-test [data-on="13"] {
-  transform: translate(0, -600px);
-}
-.oxmod-psychological-test [data-on="14"] {
-  transform: translate(0, -650px);
-}
-.oxmod-psychological-test [data-on="15"] {
-  transform: translate(0, -700px);
-}
-.oxmod-psychological-test [data-on="16"] {
-  transform: translate(0, -750px);
-}
-.oxmod-psychological-test [data-on="17"] {
   transform: translate(0, -800px);
 }
-.oxmod-psychological-test [data-on="18"] {
-  transform: translate(0, -850px);
+.oxmod-psychological-test [data-on="12"] {
+  transform: translate(0, -880px);
 }
-.oxmod-psychological-test [data-on="19"] {
-  transform: translate(0, -900px);
+.oxmod-psychological-test [data-on="13"] {
+  transform: translate(0, -960px);
 }
-.oxmod-psychological-test [data-on="20"] {
-  transform: translate(0, -950px);
+.oxmod-psychological-test [data-on="14"] {
+  transform: translate(0, -1040px);
 }
-.oxmod-psychological-test [data-on="21"] {
-  transform: translate(0, -1000px);
+.oxmod-psychological-test [data-on="15"] {
+  transform: translate(0, -1120px);
 }
-.oxmod-psychological-test [data-on="22"] {
-  transform: translate(0, -1050px);
-}
-.oxmod-psychological-test [data-on="23"] {
-  transform: translate(0, -1100px);
-}
-.oxmod-psychological-test [data-on="24"] {
-  transform: translate(0, -1150px);
-}
-.oxmod-psychological-test [data-on="25"] {
+.oxmod-psychological-test [data-on="16"] {
   transform: translate(0, -1200px);
 }
+.oxmod-psychological-test [data-on="17"] {
+  transform: translate(0, -1280px);
+}
+.oxmod-psychological-test [data-on="18"] {
+  transform: translate(0, -1360px);
+}
+.oxmod-psychological-test [data-on="19"] {
+  transform: translate(0, -1440px);
+}
+.oxmod-psychological-test [data-on="20"] {
+  transform: translate(0, -1520px);
+}
+.oxmod-psychological-test [data-on="21"] {
+  transform: translate(0, -1600px);
+}
+.oxmod-psychological-test [data-on="22"] {
+  transform: translate(0, -1680px);
+}
+.oxmod-psychological-test [data-on="23"] {
+  transform: translate(0, -1760px);
+}
+.oxmod-psychological-test [data-on="24"] {
+  transform: translate(0, -1840px);
+}
+.oxmod-psychological-test [data-on="25"] {
+  transform: translate(0, -1920px);
+}
 .oxmod-psychological-test [data-on="26"] {
-  transform: translate(0, -1250px);
+  transform: translate(0, -2000px);
 }
 .oxmod-psychological-test [data-on="27"] {
-  transform: translate(0, -1300px);
+  transform: translate(0, -2080px);
 }
 .oxmod-psychological-test [data-on="28"] {
-  transform: translate(0, -1350px);
+  transform: translate(0, -2160px);
 }
 .oxmod-psychological-test [data-on="29"] {
-  transform: translate(0, -1400px);
+  transform: translate(0, -2240px);
 }
 .oxmod-psychological-test [data-on="30"] {
-  transform: translate(0, -1450px);
+  transform: translate(0, -2320px);
 }
